<resources>
    <string name="app_name">Bazaar</string>

    <string name="import_editor">Import Editor</string>

    <string name="export_editor">Export Editor</string>

    <string name="expense_editor">Expense Editor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit blank here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding </string>

    <string name="category_price"> Price  :</string>

    <string name="hint_enter_amount">Enter Amount</string>

    <string name="unit_price">Rs.</string>

    <string name="category_quantity"> Quantity :</string>

    <string name="default_quantity">1</string>

    <string name="save_button">Save</string>

    <string name="delete_button">Delete</string>

    <string name="category_food"> Food :</string>

    <string name="category_auto"> Auto :</string>

    <string name="category_others"> Others :</string>

    <string name="category_kaku"> Kaku :</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current Entry-->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog message to ask the user to confirm deleting the current Entry -->
    <string name="delete_dialog_msg">Delete this entry?</string>

    <!-- Dialog button text for the option to confirm deleting the current Entry -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current Entry -->
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current entry was successfully deleted -->
    <string name="editor_delete_entry_successful">Entry deleted</string>

    <!-- Toast message in editor when current entry has failed to be deleted -->
    <string name="editor_delete_entry_failed">Error with deleting entry</string>


</resources>
